--- a/src/sass/modules/share-link.scss
+++ b/src/sass/modules/share-link.scss
@@ -1,15 +1,14 @@
 @import '../base.scss';
 
 .share-link {
+    position: relative;
     box-sizing: border-box;
-    display: table;
     width: 100%;
     border: solid 3px $light-gray;
     border-top: none;
 }
 
 .share-link__label {
-    display: table-cell;
     width: 3.5rem;
     padding: 0.5rem 1rem;
     background: $light-gray;
@@ -22,8 +21,15 @@
     font-family: monospace;
     background: none;
     border: none;
-    width: 100%;
-    display: table-cell;
     padding: 0.5rem 1rem;
     font-size: 1.2rem;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.share-link__url-wrapper {
+    position: absolute;
+    left: 5.5rem;
+    right: 0;
+    top: 0;
 }
